--- a/Uczenie maszynowe semestr 5/Lista 1/Ridge.ipynb
+++ b/Uczenie maszynowe semestr 5/Lista 1/Ridge.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c6471a08",
+   "metadata": {},
+   "source": [
+    "importowanie bibliotek"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "03fd5da2",
    "metadata": {},
    "outputs": [],
@@ -40,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "f69d21e1",
    "metadata": {},
    "outputs": [],
@@ -49,25 +57,48 @@
     "    def __init__(self, alpha=0.0, tol=1e-12):\n",
     "        self.alpha = float(alpha)\n",
     "        self.tol = float(tol)\n",
-    "        self.beta = None  # (m,1)\n",
+    "        self.beta = None \n",
     "\n",
     "    def dL(self, X, Y,j):\n",
+    "        \"\"\"Compute the derivate of the loss function with respect to beta_j\n",
+    "\n",
+    "        Args:\n",
+    "            X (np.ndarray): x values\n",
+    "            Y (np.ndarray): y values\n",
+    "            j (int): Index of the coefficient\n",
+    "\n",
+    "        Returns:\n",
+    "            float: The derivative of the loss function with respect to beta_j\n",
+    "        \"\"\"\n",
     "\n",
     "        n, m = X.shape\n",
     "        suma = 0\n",
     "\n",
     "        for i in range(n):\n",
-    "            suma += (Y[i] - X[i,:] @ self.beta) *(-X[i,j])\n",
+    "            suma += (Y[i] - X[i,:] @ self.beta) *( -X[i,j])\n",
     "        return suma + (self.alpha * self.beta[j] if j > 0 else 0.0)\n",
     "         \n",
     "\n",
-    "    def fit(self, X, Y, c=0.0001):\n",
+    "    def fit(self, X, Y, c=0.01):\n",
+    "        \"\"\"Fits the model to the data using gradient descent\n",
+    "\n",
+    "        Args:\n",
+    "            X (np.ndarray): x values\n",
+    "            Y (np.ndarray): y values\n",
+    "            c (float, optional): Learning rate. Defaults to 0.0001.\n",
+    "        \n",
+    "        Returns:\n",
+    "            RidgeRegr: The fitted model\n",
+    "        \"\"\"\n",
     "        \n",
     "        n, m = X.shape\n",
+    "\n",
     "        X = np.hstack((np.ones((X.shape[0],1)),X))\n",
+    "\n",
     "        self.beta = np.zeros(m + 1, dtype=float)\n",
     "\n",
     "        while True:\n",
+    "\n",
     "            beta_old = self.beta.copy()\n",
     "\n",
     "            for j in range(m+1):\n",
@@ -79,6 +110,13 @@
     "        return self\n",
     "\n",
     "    def predict(self, X):\n",
+    "        \"\"\"Predicts the output for the given input data\n",
+    "\n",
+    "        Args:\n",
+    "            X (np.ndarray): x values\n",
+    "\n",
+    "        Returns:\n",
+    "            np.ndarray: Predicted y values\"\"\"\n",
     "\n",
     "        n, m = X.shape\n",
     "        X = np.hstack((np.ones((X.shape[0],1)),X))\n",
@@ -88,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "id": "638be177",
    "metadata": {},
    "outputs": [],
@@ -117,8 +155,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f4faeed",
+   "metadata": {},
+   "source": [
+    "testy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "id": "7f02c344",
    "metadata": {},
    "outputs": [
@@ -141,7 +187,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
