--- a/Uczenie maszynowe semestr 5/Lista 1/Regresja.ipynb
+++ b/Uczenie maszynowe semestr 5/Lista 1/Regresja.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ba6c4bfc",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "06cd2232",
    "metadata": {},
    "outputs": [],
@@ -118,6 +118,7 @@
     "            Before applying the formula to X, a column of ones should be added.\n",
     "            Function definitions taken from https://www.statlearning.com\n",
     "        \"\"\"\n",
+    "        \n",
     "        n, m = X.shape\n",
     "\n",
     "        X = np.hstack((np.ones((n,1)),X))\n",
@@ -131,8 +132,13 @@
     "        return self\n",
     "        \n",
     "    def predict(self, X):\n",
-    "        \"\"\"\n",
-    "        Zwraca przewidywane wartosci funkcji dla kazdego wiersza macierzy X.\n",
+    "        \"\"\"Zwraca przewidywane wartosci funkcji dla kazdego wiersza macierzy X.\n",
+    "\n",
+    "        Args:\n",
+    "            X (np.ndarray): x values\n",
+    "\n",
+    "        Returns:\n",
+    "            Y (np.ndarray): predicted y values\n",
     "        \"\"\"\n",
     "        n, m = X.shape\n",
     "        X = np.hstack((np.ones((n,1)),X))\n",
@@ -144,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "fcf77487",
    "metadata": {},
    "outputs": [],
@@ -154,7 +160,9 @@
     "    Y = np.array([2,5, 3, 8])\n",
     "    a = np.array([1,2,10]).reshape((3,1))\n",
     "    expected = LinearRegression().fit(X, Y).predict(a)\n",
+    "    print(expected)\n",
     "    actual = LinearRegr().fit(X, Y).predict(a)\n",
+    "    print(actual)\n",
     "    assert list(actual) == pytest.approx(list(expected))\n",
     "\n",
     "def test_RegressionInThreeDim():\n",
@@ -162,16 +170,37 @@
     "    Y = np.array([2,5, 3, 8])\n",
     "    a = np.array([1,0,0, 0,1,0, 0,0,1, 2,5,7, -2,0,3]).reshape((5,3))\n",
     "    expected = LinearRegression().fit(X, Y).predict(a)\n",
+    "    print(expected)\n",
     "    actual = LinearRegr().fit(X, Y).predict(a)\n",
+    "    print(actual)\n",
     "    assert list(actual) == pytest.approx(list(expected))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "40750321",
+   "metadata": {},
+   "source": [
+    "testy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "id": "5e24e8bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.8         3.34285714 15.68571429]\n",
+      "[ 1.8         3.34285714 15.68571429]\n",
+      "[ 2.25 -1.75  2.75  2.    3.75]\n",
+      "[ 2.25 -1.75  2.75  2.    3.75]\n"
+     ]
+    }
+   ],
    "source": [
     "test_RegressionInOneDim()\n",
     "\n",
@@ -181,7 +210,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
