--- a/Analiza Przeżycia/Lista 2/Lista 2 Ostateczna.Rmd
+++ b/Analiza Przeżycia/Lista 2/Lista 2 Ostateczna.Rmd
@@ -1,29 +1,169 @@
 ---
-title: "Lista 2 Ostateczna"
-output: html_document
-date: "2025-11-05"
+title: "Lista 2"
+header-includes:
+  - \usepackage{float}
+output:
+  pdf_document: default
+  html_document: default
+date: "2025-10-26"
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(
+  echo = FALSE,
+  message = FALSE,
+  warning = FALSE
+)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r libraries_import}
+library(ggplot2)
+library(dplyr)
+library(tidyr)
+library(xtable)
+library(survival)
+library(survminer)
+library(survRM2)
 ```
 
-## Including Plots
+# Zadanie 1
 
-You can also embed plots, for example:
+Funckja została napisana zgodnie z wytycznymi zadania
+```{r zad1}
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+#--------------------------Potrzebne funkcje-------------------------------
+# gęstość
+dexpoexp <- function(x, alpha, lambda, log = FALSE) {
+  if (any(alpha <= 0) || any(lambda <= 0)) stop("alpha, lambda must be > 0")
+  x <- pmax(x, 0)  # gęstość poza [0,inf) = 0
+  logf <- log(alpha) + log(lambda) - lambda * x +
+          (alpha - 1) * log1p(-exp(-lambda * x))  # log(1 - e^{-λx}) stabilnie
+  if (log) logf else exp(logf)
+}
+
+#dystrybuanta
+pexpoexp <- function(q, alpha, lambda, lower.tail = TRUE, log.p = FALSE) {
+  if (any(alpha <= 0) || any(lambda <= 0)) stop("alpha, lambda must be > 0")
+  q <- pmax(q, 0)
+  F <- (1 - exp(-lambda * q))^alpha
+  if (!lower.tail) F <- 1 - F
+  if (log.p) log(F) else F
+}
+#kwantyl
+qexpoexp <- function(p, alpha, lambda, lower.tail = TRUE, log.p = FALSE) {
+  if (any(alpha <= 0) || any(lambda <= 0)) stop("alpha, lambda must be > 0")
+  if (log.p) p <- exp(p)
+  if (!lower.tail) p <- 1 - p
+  if (any(p < 0 | p > 1)) stop("p must be in [0,1]")
+  -(1 / lambda) * log(1 - p^(1 / alpha))
+}
+#-------------------------------------------------------------------------
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r generator_próbek,echo = TRUE}
+#--------------------------Generator Próbek-------------------------------
+
+#generator próbek
+rexpoexp <- function(n, alpha, lambda) {
+  if (length(n) != 1 || n < 0) stop("n>0!")
+  u <- runif(n)
+  qexpoexp(u, alpha, lambda)
+}
+
+generator_zm_cenzurowanych <- function(n,alpha,lambda,type,t){
+  values <- rexpoexp(n,alpha,lambda)
+  sorted_values <- sort(values)
+  if(type == 1){
+    
+  censored <-sorted_values>t
+  sorted_values <- ifelse(censored, t, sorted_values)
+  return (data.frame(sorted_values,censored))
+  }
+  if(type == 2){
+    
+    censored <- (1:length(values) > (length(values)-t))
+    sorted_values <- ifelse(censored, max(((!censored)*sorted_values) 
+                                          [1:(length(values)-t)]), sorted_values)
+    return (data.frame(sorted_values,censored))
+  }
+  if(type == 3){
+    c <-rexp(1,1/t)
+    censored <- sorted_values > c
+    sorted_values <- ifelse(censored, c, sorted_values)
+    return (data.frame(sorted_values,censored))
+    
+  }
+}
+#-------------------------------------------------------------------------
+```
+
+
+# Zadanie 2
+
+
+```{r zad2,results='asis'}
+
+wygeneruj_zm_opisowe <- function(values){
+ 
+  
+  censored <- values$censored
+  values <- values$sorted_values
+  
+  results <- data.frame(
+  Q1 = quantile(values,1/4),
+  Q2 = quantile(values,1/2),
+  Q3 = quantile(values,3/4),
+  RANGE = diff(range(values)),
+  IQR = quantile(values,3/4)-quantile(values,1/4),
+  CENSORED = sum(censored),
+  NCENSORED = length(censored)-sum(censored))
+  return (results)
+}
+
+df1 <- wygeneruj_zm_opisowe(generator_zm_cenzurowanych(40,8,1,1,3))
+df2 <- wygeneruj_zm_opisowe(generator_zm_cenzurowanych(40,8,1,2,3))
+df3 <- wygeneruj_zm_opisowe(generator_zm_cenzurowanych(40,8,1,3,3))
+
+df_all <- rbind(df1,df2,df3)
+rownames(df_all) <- c("Cenzura 1 typu","Cenzura 2 typu","Cenzura 3 typu")
+tab <- xtable(df_all,digits = 4, caption = "Statystyki opisowe dla wygenerowanych danych cenzurowanych") 
+print(tab,type = "latex",comment = FALSE,table.placement = "H",caption.placement = "top")
+```
+
+Wnioski : 
+
+# Zadanie 3
+
+
+```{r zad3,results='asis'}
+
+times_A <- c(0.03345514, 0.08656403, 0.08799947, 0.24385821, 0.27755032,
+             0.40787247, 0.58825664, 0.64125620, 0.90679161, 0.94222208)
+
+times_B <- c(0.03788958, 0.12207257, 0.20319983, 0.24474299, 0.30492413,
+             0.34224462, 0.42950144, 0.44484582, 0.63805066, 0.69119721)
+
+wygeneruj_zm_opisowe <- function(values){
+ 
+  
+  
+  results <- data.frame(
+  Q1 = quantile(values,1/4),
+  Q2 = quantile(values,1/2),
+  Q3 = quantile(values,3/4),
+  RANGE = diff(range(values)),
+  IQR = quantile(values,3/4)-quantile(values,1/4))
+  return (results)
+}
+
+df1 <- wygeneruj_zm_opisowe(times_A)
+df2 <- wygeneruj_zm_opisowe(times_B)
+
+df_all <- rbind(df1,df2)
+rownames(df_all) <- c("lek A","lek B")
+
+tab <- xtable(df_all,digits = 4,caption = "Statystyki opisowe dla danych dotyczących leków ") 
+print(tab,type = "latex",comment = FALSE,table.placement = "H",caption.placement = "top")
+
+```
+Wnioski : 
