--- a/Analiza Przeżycia/Lista 3 i 4/Sprawozdanie_1_AP.Rmd
+++ b/Analiza Przeżycia/Lista 3 i 4/Sprawozdanie_1_AP.Rmd
@@ -19,12 +19,381 @@ lof: true
 lot: true
 ---
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, cache = FALSE)
+knitr::opts_chunk$set(echo = FALSE, cache = FALSE)
 knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
 knitr::opts_chunk$set(fig.pos = "H", out.extra ='', fig.align = "center")
 
 ```
 
+# Lista 1
+
+```{r libraries_import}
+library(ggplot2)
+library(dplyr)
+library(tidyr)
+library(xtable)
+library(ggplot2)
+library(dplyr)
+library(tidyr)
+library(xtable)
+library(survival)
+library(survminer)
+library(survRM2)
+set.seed(123)
+```
+
+## Zadanie 1
+
+Gęstość funkcji $$
+f(t,\alpha,\beta,\gamma)=
+\frac{\alpha\gamma}{\beta}
+\left(\frac{t}{\beta}\right)^{\alpha-1}
+\left[1-\exp\!\left(-\left(\frac{t}{\beta}\right)^{\alpha}\right)\right]^{\gamma-1}
+\exp\!\left(-\left(\frac{t}{\beta}\right)^{\alpha}\right)\,
+\mathbf{1}_{(0,\infty)}(t).
+$$
+
+```{r gęstość_f,echo = TRUE}
+
+density_weib <- function(x, alpha, beta, gamma) {
+  dens <- ifelse(
+    x > 0,
+    (alpha * gamma / beta) *
+      (x / beta)^(alpha - 1) *
+      (1 - exp(-(x / beta)^alpha))^(gamma - 1) *
+      exp(-(x / beta)^alpha),
+    0
+  )
+  return(dens)
+}
+
+```
+
+Dystrybuanta funkcji
+
+$$
+F(t,\alpha,\beta,\gamma)=
+\begin{cases}
+\left[1-\exp\!\left(-\left(\dfrac{t}{\beta}\right)^{\alpha}\right)\right]^{\gamma}, & t\ge 0,\\[6pt]
+0, & t<0~.
+\end{cases}
+$$
+
+```{r dyst_funkcji,echo = TRUE}
+
+distrib_weib <- function(x, alpha, beta, gamma){
+  dist <- (1-exp(-(x/beta)^alpha))^gamma
+  return(dist)
+}
+
+```
+
+Funkcja hazardu
+
+$$
+h(t,\alpha,\beta,\gamma)
+= \frac{f(t,\alpha,\beta,\gamma)}{1 - F(t,\alpha,\beta,\gamma)}
+= \frac{f(t,\alpha,\beta,\gamma)}{S(t)} ,
+$$
+
+```{r f_hazardu,echo = TRUE}
+
+haz_weib <- function(x, alpha, beta, gamma){
+  haz <- density_weib(x, alpha, beta, gamma) / 
+    (1 - distrib_weib(x, alpha, beta, gamma))
+  return(haz)
+}
+
+```
+
+Funkcja kwantylowa (odwrotnej dystrybuanty)
+
+$$
+Q(p;\alpha,\beta,\gamma)
+= \beta\left[-\ln\!\Big(1-p^{1/\gamma}\Big)\right]^{1/\alpha},
+\qquad 0<p<1,
+$$
+
+```{r f_kwantylowa,echo = TRUE}
+
+quant_weib <- function(p, alpha, beta, gamma){
+  quant <- beta * (-log(1 - p^(1 / gamma)))^(1 / alpha)
+  return(quant)
+}
+
+```
+
+Funkcje zostały napisane zgodnie z definicjami
+
+## Zadanie 2
+
+```{r zadanie2}
+
+xvalue <- seq(0.3, 10, 0.05)
+yvalue1 <- haz_weib(xvalue, 1/2, 2, 3/4)
+yvalue2 <- haz_weib(xvalue, 1, 2, 1)
+yvalue3 <- haz_weib(xvalue, 3/2, 3, 3)
+yvalue4 <- haz_weib(xvalue, 3/2, 4, 1/8)
+yvalue5 <- haz_weib(xvalue, 3/4, 1, 2)
+
+data1 <- data.frame(xvalue, yvalue1) 
+data2 <- data.frame(xvalue, yvalue2) 
+data3 <- data.frame(xvalue, yvalue3) 
+data4 <- data.frame(xvalue, yvalue4) 
+data5 <- data.frame(xvalue, yvalue5) 
+
+labels <- c(
+  expression(gamma == 0.5 ~ "," ~ beta == 2 ~ "," ~ alpha == 3/4),
+  expression(gamma == 1 ~ "," ~ beta == 2 ~ "," ~ alpha == 1),
+  expression(gamma == 3/2 ~ "," ~ beta == 3 ~ "," ~ alpha == 3),
+  expression(gamma == 3/2 ~ "," ~ beta == 4 ~ "," ~ alpha == 1/8),
+  expression(gamma == 3/4 ~ "," ~ beta == 1 ~ "," ~ alpha == 2)
+)
+
+hazard_plot <- ggplot() + geom_line(data=data1, aes(x=xvalue, y=yvalue1, color='A')) + 
+  geom_line(data=data2, aes(x=xvalue, y=yvalue2, color='B')) + 
+  geom_line(data=data3, aes(x=xvalue, y=yvalue3, color='C')) + 
+  geom_line(data=data4, aes(x=xvalue, y=yvalue4, color='D')) + 
+  geom_line(data=data5, aes(x=xvalue, y=yvalue5, color='E')) +
+  scale_color_manual(values=c('A'='yellow', 'B'='blue', 'C'='magenta', 'D'='green', 'E'='red'),
+                     labels = labels) +
+  theme(legend.position = "right") + xlim(0,10) + ylim(0,1) + theme_minimal() + 
+  labs(y="hazard", x="x", title = "Wykresy funkcji hazardu z uogólnionego rozkłądu Weibulla")
+
+print(hazard_plot)
+
+```
+Wnioski : Wykresy dla odpowiednich parametrów są zgodne z oczekiwaniami
+
+## Zadanie 3
+
+Dane są generowane przy użyciu metody odwrotnej dystrybuanty ( u nas funkcji kwatylowej)
+
+```{r generator, echo = TRUE}
+
+number_generator <- function(n, alpha, beta, gamma){
+  u <- runif(n)  # losujemy z U(0,1)
+  x <- quant_weib(u, alpha, beta, gamma)  
+  return(x)
+}
+
+```
+
+## Zadanie 4
+
+```{r zad 4}
+mala_p <- number_generator(50, 1, 2, 1)
+mala_d <- number_generator(50, 1/2, 2, 3/8)
+duza_p <- number_generator(100, 1, 2, 1)
+duza_d <- number_generator(100, 1/2, 2, 3/8)
+
+par(mfrow = c(2, 2))
+
+labels <- c(
+  expression(gamma == 0.5 ~ "," ~ beta == 2 ~ "," ~ alpha == 3/4),
+  expression(gamma == 1 ~ "," ~ beta == 2 ~ "," ~ alpha == 1),
+  expression(gamma == 3/2 ~ "," ~ beta == 3 ~ "," ~ alpha == 3),
+  expression(gamma == 3/2 ~ "," ~ beta == 4 ~ "," ~ alpha == 1/8),
+  expression(gamma == 3/4 ~ "," ~ beta == 1 ~ "," ~ alpha == 2)
+)
+
+
+# small_p
+hist(mala_p, probability = TRUE, col = "lightblue", main = labels[1],xlab = "n = 50",ylab = "density")
+x_vals <- seq(min(mala_p), max(mala_p), length.out = 100)
+lines(x_vals, density_weib(x_vals, gamma = 1, beta = 2, alpha = 1), col = "deeppink", lwd = 2)
+
+# small_d
+hist(mala_d, probability = TRUE, col = "lightblue", main = labels[2],xlab = "n = 50",ylab = "density")
+x_vals <- seq(min(mala_d), max(mala_d), length.out = 100)
+lines(x_vals, density_weib(x_vals, gamma = 1/2, beta = 2, alpha = 3/8), col = "deeppink", lwd = 2)
+
+# large_p
+hist(duza_p, probability = TRUE, col = "lightblue", main = labels[3],xlab = "n = 100",ylab = "density")
+x_vals <- seq(min(duza_p), max(duza_p), length.out = 100)
+lines(x_vals, density_weib(x_vals, gamma = 1, beta = 2, alpha = 1), col = "deeppink", lwd = 2)
+
+# large_d
+hist(duza_d, probability = TRUE, col = "lightblue", main = labels[4],xlab = "n = 100",ylab = "density")
+x_vals <- seq(min(duza_d), max(duza_d), length.out = 100)
+lines(x_vals, density_weib(x_vals, gamma = 1/2, beta = 2, alpha = 3/8), col = "deeppink", lwd = 2)
+
+```
+
+Wnioski : Dla n = 100 histogramy są lepiej dopasowane do wykresów gęstości rozkładów. Co jest zgodne z intuicją, biorąc pod uwagę fakt, że dane są generowane z tych rozkładów.
+
+## Zadanie 5
+
+```{r zadanie 5,results='asis'}
+
+statystyki_weib <- function(dane, alpha, beta, gamma, nazwa){
+  srednia <- mean(dane)
+  mediana_emp <- median(dane)
+  sd_emp <- sd(dane)
+  kw1_emp <- quantile(dane, 0.25)
+  kw3_emp <- quantile(dane, 0.75)
+  min_emp <- min(dane)
+  max_emp <- max(dane)
+  
+  mediana_teor <- quant_weib(0.5, alpha, beta, gamma)
+  kw1_teor <- quant_weib(0.25, alpha, beta, gamma)
+  kw3_teor <- quant_weib(0.75, alpha, beta, gamma)
+  
+  data.frame(
+    Args = nazwa,
+    Mean = srednia,
+    Med_emp = mediana_emp,
+    Med = mediana_teor,
+    SD = sd_emp,
+    Q1_em = kw1_emp,
+    Q1_tr = kw1_teor,
+    Q3_em = kw3_emp,
+    Q3_tr = kw3_teor,
+    Min = min_emp,
+    Max = max_emp,
+    rozstęp = max_emp - min_emp,
+    stringsAsFactors = FALSE
+  )
+}
+
+tab_stat <- rbind(
+  statystyki_weib(mala_p, 1, 2, 1, "Zestaw 1"),
+  statystyki_weib(mala_d, 1/2, 2, 3/8,"Zestaw 2"),
+  statystyki_weib(duza_p, 1, 2, 1,"Zestaw 3"),
+  statystyki_weib(duza_d, 1/2, 2, 3/8,"Zestaw 4")
+)
+
+num_cols <- sapply(tab_stat, is.numeric)
+tab_stat[num_cols] <- lapply(tab_stat[num_cols], function(x) round(x, 4))
+
+tab_xtable <- xtable(tab_stat, caption = "Statystyki dla rozkładu Weibulla", label = "tab:weibull_stats")
+
+print(tab_xtable, include.rownames = FALSE, caption.placement = "top",comment = FALSE)
+
+
+```
+
+Zestaw 1 : $\alpha = 1$ $\beta = 2$ $\gamma = 1$ n = 50 | Zestaw 3 : $\alpha = 1$ $\beta = 2$ $\gamma = 1$ n = 100 
+
+Zestaw 2 : $\alpha = \frac{1}{2}$ $\beta = 2$ $\gamma = \frac{3}{8}$ n = 50 | Zestaw 4 : $\alpha = \frac{1}{2}$ $\beta = 2$ $\gamma = \frac{3}{8}$ n = 100
+
+
+Wnioski : Dla większej próby widać dokładniejsze kwantyle bardziej zbliżone do ich teoretycznej wartości, niż dla próby mniejszej.Jedynie w zestawie pierwszym, Q3 jest bliższe teoretycznej wartości niż w zestawie 3, jest to zapewno spowodowane losowością danych oraz dość małą próbą (50 i 100).
+
+# Lista 2
+
+## Zadanie 1
+
+Funckja została napisana zgodnie z wytycznymi zadania
+```{r zad1,echo = TRUE}
+
+#--------------------------Generatory-------------------------------
+gen1 <- function(n, alpha, lambda, t0){
+  y <- runif(n)
+  x <- - (1/lambda)*log(1- y^(1/alpha))
+  
+  delta <- ifelse(x <= t0, 1, 0)
+  x_obs <- pmin(x, t0)
+  
+  return(data.frame(x = x_obs, delta = delta))
+}
+
+gen2 <- function(n, alpha, lambda, m) {
+  y <- runif(n)
+  x <- - (1/lambda)*log(1- y^(1/alpha))
+  
+  x <- sort(x)
+  x_cenz <- x[m]
+  
+  x <- c(x[1:m], rep(x_cenz, n-m))
+  delta <- c(rep(1,m), rep(0, n-m))
+  
+  return(data.frame(x, delta))
+}
+
+
+gen3 <-  function(n, alpha, lambda, eta){
+  y <- runif(n)
+  x <- - (1/lambda)*log(1- y^(1/alpha))
+  c <- rexp(n, rate=1/eta)
+  x <- pmin(x, c)
+  delta <- ifelse(x==c, 0, 1)
+  
+  return(data.frame(x, delta))
+}
+#-------------------------------------------------------------------------
+```
+
+
+## Zadanie 2
+
+
+```{r zad2,results='asis'}
+
+wygeneruj_zm_opisowe <- function(values){
+ 
+  
+  censored <-1 - values$delta
+  values <-  values$x
+  
+  results <- data.frame(
+  Q1 = quantile(values,1/4),
+  Q2 = quantile(values,1/2),
+  Q3 = quantile(values,3/4),
+  RANGE = diff(range(values)),
+  IQR = quantile(values,3/4)-quantile(values,1/4),
+  CENSORED = sum(censored),
+  NCENSORED = length(censored)-sum(censored))
+  return (results)
+}
+
+df1 <- wygeneruj_zm_opisowe(gen1(n=20, alpha = 1.2, lambda = 1, t0=5))
+df2 <- wygeneruj_zm_opisowe(gen2(n=20, alpha = 1.2, lambda = 1,m=12))
+df3 <- wygeneruj_zm_opisowe(gen3(n=20, alpha = 1.2, lambda = 1, eta = 1.8))
+
+df_all <- rbind(df1,df2,df3)
+rownames(df_all) <- c("Cenzura 1 typu","Cenzura 2 typu","Cenzura 3 typu")
+tab <- xtable(df_all,digits = 4, caption = "Statystyki opisowe dla wygenerowanych danych cenzurowanych") 
+print(tab,type = "latex",comment = FALSE,table.placement = "H",caption.placement = "top")
+```
+
+Wnioski : Dane cenzurowane typu 1 i 2 mają podobne Q1 i Q2, różnice dopiero widać w Q3, dla typu drugiego jest ono niższe, co jest zgodne z intuciją. W pierwszym typie wszystkie dane są pełne za to w drugim na końcu pojawia się jakaś ilość danych cenzurowanych. W cenzurze 3 typu, czas do którego danego są cenzurowane generowany jest z rozkładu wykładniczego, czyli dane n pierwszych obserwacji są cenzurowane. Powoduje to zmniejszenie IQR, ze względu na zastąpienie brakujących danych czasem od którego obserwacje zaczęły być całkowite.
+
+## Zadanie 3
+
+
+```{r zad3,results='asis'}
+
+times_A <- c(0.03345514, 0.08656403, 0.08799947, 0.24385821, 0.27755032,
+             0.40787247, 0.58825664, 0.64125620, 0.90679161, 0.94222208,rep(1,10))
+
+times_B <- c(0.03788958, 0.12207257, 0.20319983, 0.24474299, 0.30492413,
+             0.34224462, 0.42950144, 0.44484582, 0.63805066, 0.69119721,rep(1,10))
+
+wygeneruj_zm_opisowe <- function(values){
+ 
+  
+  
+  results <- data.frame(
+  Q1 = quantile(values,1/4),
+  Q2 = quantile(values,1/2),
+  Q3 = quantile(values,3/4),
+  RANGE = diff(range(values)),
+  IQR = quantile(values,3/4)-quantile(values,1/4))
+  return (results)
+}
+
+df1 <- wygeneruj_zm_opisowe(times_A)
+df2 <- wygeneruj_zm_opisowe(times_B)
+
+df_all <- rbind(df1,df2)
+rownames(df_all) <- c("lek A","lek B")
+
+tab <- xtable(df_all,digits = 4,caption = "Statystyki opisowe dla danych dotyczcych leków ") 
+print(tab,type = "latex",comment = FALSE,table.placement = "H",caption.placement = "top")
+
+```
+Wnioski:Q2 i zakres (range) są niższe w grupie B, co może wskazywać na szybsze działanie leku oraz mniejsze zróżnicowanie wyników związane z indywidualnymi predyspozycjami biologicznymi badanych osób. W obu grupach wartość Q3 wynosi 1, co jest zrozumiałe, ponieważ połowa obserwacji została ocenzurowana.
 
 # Lista 3
 
