--- a/Modelowanie Rynków Finansowych/Lista4/Lista4.ipynb
+++ b/Modelowanie Rynków Finansowych/Lista4/Lista4.ipynb
@@ -16,7 +16,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import scipy as sp"
    ]
   },
   {
@@ -38,6 +39,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4036d22d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P1 = 0.7046880897187134\n",
+      "P2 = 0.7904720344486094\n",
+      "R = 0.1217332121565129\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f1(t) ->float:\n",
+    "    return 0.01+0.005*t\n",
+    "def f2(t) ->float:\n",
+    "    return 0.02+0.001*t\n",
+    "I1,err1 = sp.integrate.quad(f1,0,10)\n",
+    "I2,err2 = sp.integrate.quad(f2,0,9.5)\n",
+    "\n",
+    "P1 = np.e **(-I1)\n",
+    "P2 = np.e **(-I2)\n",
+    "print(\"P1 =\",P1)\n",
+    "print(\"P2 =\",P2)\n",
+    "\n",
+    "R =  P2/P1 - 1\n",
+    "\n",
+    "print(\"R =\",R)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7a56e25d",
    "metadata": {},
@@ -46,8 +81,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed4f2bb9",
+   "metadata": {},
+   "source": [
+    " Załączony plik TermStructureZero.csv zawiera symulowane dane \n",
+    " dotyczące 20 obligacji zerokuponowych. \n",
+    " W kolejnych polach znajdują się:\n",
+    "\n",
+    " Maturity  = liczba lat do wykupu,\n",
+    " Quote     = kurs obligacji.   \n",
+    "\n",
+    " Napisz kod w R, który uzupełni plik o pola:\n",
+    "\n",
+    " SpotRate    = stopa spot dla n lat (zerokuponowa)\n",
+    " ForwardRate = stopa terminowa dla n-tego roku."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f55a9f10",
    "metadata": {},
    "outputs": [
@@ -84,7 +137,7 @@
     "df[\"SpotRate\"] = ((100 / df[\"Quote\"])\\\n",
     "                    **(1 / df[\"Maturity\"])\\\n",
     "                        -1)\n",
-    "# Indexes start at 0, so we need to adjust by adding 1 to the exponent for the numerator                         \n",
+    "                     \n",
     "df['ForwardRate'] = ((1+df[\"SpotRate\"])**(df.index+1))/((1+df[\"SpotRate\"].shift(1))**(df.index))-1\n",
     "\n",
     "print(df.head(20))"
@@ -99,13 +152,207 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ec736e2",
+   "cell_type": "markdown",
+   "id": "8e5339b0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pd.read_csv('TermStructure.csv')"
+    "Załączony plik TermStructure.csv zawiera symulowane dane \n",
+    "dotyczące 20 obligacji o kuponach wypłacanych raz w roku \n",
+    "(pierwsza wypłata za rok). W kolejnych polach znajdują się:\n",
+    "\n",
+    "Maturity  = liczba lat do wykupu,\n",
+    "FV        = wartość nominalna,   \n",
+    "Coupon    = wartość kuponu,\n",
+    "Price     = cena obligacji,\n",
+    "\n",
+    "Napisz kod w R, który uzupełni plik o pola:\n",
+    "\n",
+    "SpotRate      = stopa spot dla n lat (zerokuponowa)\n",
+    "ForwardRate   = stopa terminowa dla n-tego roku."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dacedd20",
+   "metadata": {},
+   "source": [
+    "# Zadanie 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f29ae34d",
+   "metadata": {},
+   "source": [
+    " Dla notowań spółek giełdowych A,B,C z pliku NotowaniaABC.csv wyznacz\n",
+    "\n",
+    " a) oczekiwane zwroty i odchylenia standardowe tych zwrotów dla każdej \n",
+    "    ze spółek A,B,C;\n",
+    " b) oczekiwany zwrot i odchylenie standardowe zwrotów dla portfela z wagami \n",
+    "\n",
+    "     w_A=0.2,  w_B=0.3,  w_C=0.5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "05bb51bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        A       B       C\n",
+      "0  35.191  32.696  17.288\n",
+      "1  37.096  31.281  15.100\n",
+      "2  36.409  32.318  15.021\n",
+      "3  36.631  37.609  16.351\n",
+      "4  43.442  37.960  16.460\n",
+      "Oczekiwane zwroty:0.06666585167772418 0.022770019526007032 0.13105739580118375\n",
+      "Wariancje zwrotow :0.01970113991639636 0.018037434053438203 0.04300318271253653\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('NotowaniaABC.csv')\n",
+    "print(df.head())\n",
+    "\n",
+    "# Oczekiwane zwroty\n",
+    "SA = np.mean((df['A']-df['A'].shift(1))/df['A'].shift(1))\n",
+    "SB = np.mean((df['B']-df['B'].shift(1))/df['B'].shift(1))\n",
+    "SC = np.mean((df['C']-df['C'].shift(1))/df['C'].shift(1))\n",
+    "\n",
+    "# Odchylenia standardowe zwrotów\n",
+    "DA = np.std((df['A']-df['A'].shift(1))/df['A'].shift(1), ddof = 1)\n",
+    "DB = np.std((df['B']-df['B'].shift(1))/df['B'].shift(1), ddof = 1)\n",
+    "DC = np.std((df['C']-df['C'].shift(1))/df['C'].shift(1), ddof = 1)\n",
+    "\n",
+    "print(f\"Oczekiwane zwroty:{SA} {SB} {SC}\")\n",
+    "print(f\"Wariancje zwrotow :{DA**2} {DB**2} {DC**2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d5b32111",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oczekiwany zwrot portfela: 0.0857\n",
+      "Odchylenie standardowe portfela: 0.1309\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "w = np.array([0.2, 0.3, 0.5])\n",
+    "\n",
+    "\n",
+    "returns = df[['A','B','C']].pct_change().dropna()\n",
+    "\n",
+    "cov_matrix = returns.cov()\n",
+    "\n",
+    "expected_return_wallet = np.dot(w, returns.mean())\n",
+    "\n",
+    "std_portfolio_wallet = np.sqrt(np.dot(w, np.dot(cov_matrix, w)))\n",
+    "\n",
+    "print(f\"Oczekiwany zwrot portfela: {expected_return_wallet:.4f}\")\n",
+    "print(f\"Odchylenie standardowe portfela: {std_portfolio_wallet:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a076d344",
+   "metadata": {},
+   "source": [
+    "# Zadanie 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c56fc2b7",
+   "metadata": {},
+   "source": [
+    " Dla notowań spółek giełdowych A,B,C z pliku NotowaniaABC.csv wyznacz,\n",
+    " korzystając z odpowiednich twierdzeń z wykładu 4:\n",
+    "\n",
+    "a) wagi portfela o minimalnej wariancji; \\\n",
+    "b) wagi portfela o minimalnej wariancji i oczekiwanym zwrocie 15%."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8dac0b07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a) Wagi portfela minimalnej wariancji :\n",
+      "[0.35867484 0.47000256 0.17132261]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv(\"NotowaniaABC.csv\")\n",
+    "\n",
+    "\n",
+    "returns = df[['A','B','C']].pct_change().dropna()\n",
+    "mean_returns = returns.mean()\n",
+    "cov_matrix = returns.cov()\n",
+    "\n",
+    "\n",
+    "C = cov_matrix.values\n",
+    "C_inv = np.linalg.inv(C)\n",
+    "\n",
+    "u = np.ones(3)\n",
+    "\n",
+    "A = u @ C_inv @ u.T\n",
+    "\n",
+    "wagi = (u @ C_inv) / A\n",
+    "\n",
+    "print(\"a) Wagi portfela minimalnej wariancji :\")\n",
+    "print(wagi)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5d450b5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.73852829 -0.61408433  0.87555604]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "r = 0.15\n",
+    "mu = mean_returns.values\n",
+    "u = np.ones(3)\n",
+    "\n",
+    "B = mu @ C_inv @ u.T\n",
+    "C = mu @ C_inv @ mu.T\n",
+    "D = u @ C_inv @ mu.T\n",
+    "Delta = A*C - B**2\n",
+    "\n",
+    "w = (((C - r * B))*(u @ C_inv ) + (A*r - D) * (mu @ C_inv ))/Delta\n",
+    "\n",
+    "print(w)"
    ]
   }
  ],
